--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.10",
+    "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.1.3",
+    "vuejs-progress-bar": "^1.2.0",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
