--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^3.1.3",
     "vuejs-progress-bar": "^1.2.0",
     "vuelidate": "^0.7.4",
+    "vuetify": "^2.1.15",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
