--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
     "nprogress": "^0.2.0",
+    "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.1.3",
