--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
+    "gsap": "^3.0.5",
     "image-promise": "^7.0.0",
     "nprogress": "^0.2.0",
     "v-tooltip": "^2.0.2",
