--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "nprogress": "^0.2.0",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.22.1",
+    "vue-head": "^2.2.0",
     "vue-radial-progress": "^0.2.10",
     "vue-router": "^3.1.3",
     "vuejs-progress-bar": "^1.2.0",
